--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "simbirsoft",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "react-bootstrap-table": "^4.3.1",
+    "react-table": "^6.8.0"
+  }
 }
